gcc/testsuite/gm2/iso/fail/badexpression3.mod
MODULE badexpression3 ;

VAR
   c: CARDINAL ;
   i: INTEGER ;
   r: CARDINAL ;
BEGIN
   c := 1 ;
   i := 2 ;
   r := c + i
END badexpression3.
